overflow fixed

--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -53,7 +53,9 @@
   background-color: white;
   border-radius: 15px 15px 0px 0px;
 }
-
+.noscroll{
+  overflow: hidden;
+}
 .replyShown{
   display: block;
   position: fixed;
