--- a/styles/CardList.module.css
+++ b/styles/CardList.module.css
@@ -5,7 +5,9 @@
     scroll-snap-type: y mandatory;
     margin: 0;
 }
-
+.noscroll{
+  overflow: hidden;
+}
   @keyframes shine {
     from {
       background-position: center 0;
